--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rmacklin/gulp-purifycss",
-  "version": "0.2.0",
+  "version": "0.2.0-pr24",
   "description": "Remove unnecessary css",
   "main": "index.js",
   "scripts": {
